# Pinterestx

./: .gitignore  LICENSE  README.md
pinterest_downloader/: Cargo.toml
pinterest_downloader/src/: main.rs
pinterest_downloader/templates/: base.html  index.html
pinterest_downloader/templates/partials/: download_results.html
src/: downloader.rs  main.rs  web.rs
templates/: base.html  index.html
templates/partials/: download_results.html
