[package]
name = "pinterest_downloader"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.12", features = ["json", "rustls-tls"], default-features = false }
tokio = { version = "1", features = ["full"] }
scraper = "0.19"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
clap = { version = "4", features = ["derive"] }
image = "0.25"
anyhow = "1.0"
url = "2.5"
dirs = "5.0"
thiserror = "1.0"
async-recursion = "1.1"
handlebars = "5.0"

# Web server dependencies
axum = "0.7"
tower-http = { version = "0.5.0", features = ["fs", "trace"] }
tera = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
rust-embed = "8.3"
once_cell = "1.19"
